Some small changes