@@ -10,10 +10,8 @@ import net.dv8tion.jda.api.interactions.commands.Command;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class AutoCompleteHandler extends ListenerAdapter {
-    
     
     @Override
     public void onCommandAutoCompleteInteraction(CommandAutoCompleteInteractionEvent event) {
@@ -22,13 +20,14 @@ public class AutoCompleteHandler extends ListenerAdapter {
         String focusedOption = event.getFocusedOption().getName();
         String currentInput = event.getFocusedOption().getValue().toLowerCase();
         
-        // Handle autocomplete for various /random subcommands
         if (commandName.equals("random") && focusedOption.equals("query")) {
             switch (subcommandName) {
                 case "reddit" -> handleSubredditAutocomplete(event, currentInput);
                 case "google" -> handleGoogleQueryAutocomplete(event, currentInput);
                 case "tenor" -> handleTenorQueryAutocomplete(event, currentInput);
                 case "4chan" -> handleFourChanBoardAutocomplete(event, currentInput);
+                case null -> {}
+                default -> throw new IllegalStateException("Unexpected value: " + subcommandName);
             }
         }
         
@@ -49,8 +48,8 @@ public class AutoCompleteHandler extends ListenerAdapter {
         // Get user's custom subreddits and filter by input
         List<String> userSubreddits = user.getCustomSubreddits().stream()
                 .filter(subreddit -> subreddit.toLowerCase().startsWith(currentInput))
-                .limit(25) // Discord limit
-                .collect(Collectors.toList());
+                .limit(25)
+                .toList();
         
         // Convert to Command.Choice objects - only show user history
         List<Command.Choice> choices = userSubreddits.stream()
@@ -63,11 +62,11 @@ public class AutoCompleteHandler extends ListenerAdapter {
     private void handleGoogleQueryAutocomplete(CommandAutoCompleteInteractionEvent event, String currentInput) {
         User user = Main.userService.getOrCreateUser(event.getUser().getId());
         
-        // Get user's google search history
+        // Get user's Google search history
         List<String> googleQueries = user.getCustomQueries("google").stream()
                 .filter(query -> query.toLowerCase().startsWith(currentInput))
                 .limit(25)
-                .collect(Collectors.toList());
+                .toList();
         
         List<Command.Choice> choices = googleQueries.stream()
                 .map(query -> new Command.Choice(query, query))
@@ -83,7 +82,7 @@ public class AutoCompleteHandler extends ListenerAdapter {
         List<String> tenorQueries = user.getCustomQueries("tenor").stream()
                 .filter(query -> query.toLowerCase().startsWith(currentInput))
                 .limit(25)
-                .collect(Collectors.toList());
+                .toList();
         
         List<Command.Choice> choices = tenorQueries.stream()
                 .map(query -> new Command.Choice(query, query))
@@ -99,7 +98,7 @@ public class AutoCompleteHandler extends ListenerAdapter {
         List<String> boards = user.getCustomQueries("4chan").stream()
                 .filter(board -> board.toLowerCase().startsWith(currentInput))
                 .limit(25)
-                .collect(Collectors.toList());
+                .toList();
         
         List<Command.Choice> choices = boards.stream()
                 .map(board -> new Command.Choice("/" + board + "/", board))
@@ -112,7 +111,6 @@ public class AutoCompleteHandler extends ListenerAdapter {
         LocalConfig config = LocalConfig.getInstance();
         Map<String, Boolean> enabledSources = config.getEnabledSources();
         
-        // Get all available sources from config, plus "all" option
         List<Command.Choice> choices = enabledSources.keySet().stream()
                 .filter(source -> source.toLowerCase().startsWith(currentInput))
                 .map(source -> new Command.Choice(source, source))
@@ -123,7 +121,6 @@ public class AutoCompleteHandler extends ListenerAdapter {
             choices.add(new Command.Choice("all", "all"));
         }
         
-        // Limit to Discord's maximum of 25 choices
         if (choices.size() > 25) {
             choices = choices.subList(0, 25);
         }
